Trigonometrik ve logaritmik işlemler, Element-wise işlemler, İleri seviye istatistik konuları hariç bırakılmıştır. Temel Numpy bilgilerini içerir.

--- a/numpyTutorial.ipynb
+++ b/numpyTutorial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "id": "d03891f9",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "id": "aeee545f",
    "metadata": {},
    "outputs": [
@@ -24,7 +24,7 @@
        "       [2, 5]])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "id": "f392a3bb",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "id": "09bec943",
    "metadata": {},
    "outputs": [
@@ -78,7 +78,7 @@
        "       [0., 0., 0.]])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "id": "3211ab95",
    "metadata": {},
    "outputs": [
@@ -104,7 +104,7 @@
        "       [1., 1., 1., 1.]])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "id": "229856a3",
    "metadata": {},
    "outputs": [
@@ -127,7 +127,7 @@
        "array([0, 2, 4, 6, 8])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "id": "c9e778be",
    "metadata": {},
    "outputs": [
@@ -150,7 +150,7 @@
        "array([0.  , 0.25, 0.5 , 0.75, 1.  ])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "id": "150e9098",
    "metadata": {},
    "outputs": [],
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "id": "68a2fa26",
    "metadata": {},
    "outputs": [
@@ -188,7 +188,7 @@
        "       [5, 6]])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 35,
    "id": "42b30f8b",
    "metadata": {},
    "outputs": [
@@ -227,7 +227,7 @@
        "np.float64(6.5)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "id": "8e589df1",
    "metadata": {},
    "outputs": [
@@ -259,7 +259,7 @@
        "       [173, 206, 239, 272]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 37,
    "id": "e1a6e157",
    "metadata": {},
    "outputs": [
@@ -286,7 +286,7 @@
        "       [24, 33]])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 38,
    "id": "9aa81fea",
    "metadata": {},
    "outputs": [
@@ -310,7 +310,7 @@
        "       [5, 7, 9]])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 39,
    "id": "54d5f600",
    "metadata": {},
    "outputs": [
@@ -336,7 +336,7 @@
        "[array([1, 2, 3]), array([4, 5, 6]), array([7, 8, 9])]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "f1dc697e",
    "metadata": {},
    "outputs": [
@@ -368,7 +368,7 @@
        "array([ 1,  8, 27, 64])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +398,7 @@
        "array([False,  True,  True, False])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,19 +408,42 @@
     "# True False dizisi döndürür. Her eleman için karşılaştırma yapar #\n",
     "# Diziler AYNI BOYUTLARDA ve AYNI ELEMAN SAYILARINA sahip olmalıdır #\n",
     "\n",
-    "a = np.array([1, 5, 11, 9])\n",
+    "a = np.array([1, -5, -11, 9])\n",
     "b = np.array([2, 3, 8, 9])\n",
     "\n",
-    "a > b"
+    "a > b\n",
+    "\n",
+    "### Filtreleme Kolaylığı ###\n",
+    "negatives = a[a < 0]\n",
+    "negatives\n",
+    "\n",
+    "### AND - OR - NOT ile mantıksal karşılaştırmalar\n",
+    "result = np.logical_and(a > 1, a < 10) # -> 1'den büyük VE 10'dan küçük olanlar\n",
+    "result = np.logical_or(a < 0, a > 10) # -> 0'dan küçük VEYA 10'dan büyük olanlar\n",
+    "result = np.logical_not(a > 5) # -> 5'ten büyük OLMAYANLAR\n",
+    "result = np.logical_xor(a > 0, a < 10) # -> Ya sıfırdan büyük olanlar YA DA 10'dan küçük olanlar ### Mantıktaki ⊻ Numpy'da xor'dur ###"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "id": "dda2713b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0002870971426745\n"
+     ]
+    }
+   ],
+   "source": [
+    "rand_array = np.random.rand(3, 3) # -> 0'la 1 arasında rastgele sayı üretir\n",
+    "\n",
+    "normal_array = np.random.normal(1, 1, (1000, 1000)) # -> np.random.normal(loc=0.0, scale=1.0, size=None)  loc = mean, scale = std, size = shape\n",
+    "print(normal_array.mean()) # -> loc parametresi, olasılık dağılımının merkezidir. Küçük örneklemlerde ortalama sapabilir, ama büyük örneklemlerde doğruya yaklaşır.\n"
+   ]
   }
  ],
  "metadata": {
